add get and update manufactures with models